--- a/.env.example
+++ b/.env.example
@@ -20,14 +20,14 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_CONNECTION=pgsql
+DB_HOST=127.0.0.1
+DB_PORT=5432
+DB_DATABASE=qlik_clone
+DB_USERNAME=postgres
+DB_PASSWORD=postgres
 
-SESSION_DRIVER=database
+SESSION_DRIVER=redis
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
 SESSION_PATH=/
@@ -35,9 +35,9 @@ SESSION_DOMAIN=null
 
 BROADCAST_CONNECTION=log
 FILESYSTEM_DISK=local
-QUEUE_CONNECTION=database
+QUEUE_CONNECTION=redis
 
-CACHE_STORE=database
+CACHE_STORE=redis
 # CACHE_PREFIX=
 
 MEMCACHED_HOST=127.0.0.1
@@ -63,3 +63,18 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+# Analytics Database
+ANALYTICS_DB_CONNECTION=duckdb
+ANALYTICS_DB_PATH=storage/analytics/warehouse.duckdb
+
+# AI Services
+OPENAI_API_KEY=
+OPENAI_ORGANIZATION=
+
+# File Upload
+MAX_UPLOAD_SIZE=10M
+
+# Airbyte (when configured)
+AIRBYTE_API_URL=http://localhost:8001
+AIRBYTE_API_TOKEN=
