--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     },
     "dependencies": {
         "@inertiajs/vue3": "^2.0.0",
+        "@radix-ui/react-select": "^2.2.5",
         "@tailwindcss/vite": "^4.1.11",
         "@vitejs/plugin-vue": "^6.0.0",
         "@vueuse/core": "^12.8.2",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "concurrently": "^9.0.1",
+        "echarts": "^5.6.0",
         "laravel-vite-plugin": "^2.0.0",
         "lucide-vue-next": "^0.468.0",
         "reka-ui": "^2.2.0",
@@ -39,6 +41,7 @@
         "typescript": "^5.2.2",
         "vite": "^7.0.4",
         "vue": "^3.5.13",
+        "vue-echarts": "^7.0.3",
         "ziggy-js": "^2.4.2"
     },
     "optionalDependencies": {
