--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
         "vue-tsc": "^2.2.4"
     },
     "dependencies": {
+        "@codemirror/autocomplete": "^6.18.6",
+        "@codemirror/lang-sql": "^6.9.1",
+        "@codemirror/theme-one-dark": "^6.1.3",
         "@inertiajs/vue3": "^2.0.0",
         "@radix-ui/react-select": "^2.2.5",
         "@tailwindcss/vite": "^4.1.11",
@@ -30,6 +33,7 @@
         "@vueuse/core": "^12.8.2",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
+        "codemirror": "^6.0.2",
         "concurrently": "^9.0.1",
         "echarts": "^5.6.0",
         "laravel-vite-plugin": "^2.0.0",
@@ -41,6 +45,7 @@
         "typescript": "^5.2.2",
         "vite": "^7.0.4",
         "vue": "^3.5.13",
+        "vue-codemirror": "^6.1.1",
         "vue-echarts": "^7.0.3",
         "ziggy-js": "^2.4.2"
     },
