--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
         "vue": "^3.5.13",
         "vue-codemirror": "^6.1.1",
         "vue-echarts": "^7.0.3",
+        "vue3-grid-layout-next": "^1.0.7",
+        "vuedraggable": "^4.1.0",
         "ziggy-js": "^2.4.2"
     },
     "optionalDependencies": {
