--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "clsx": "^2.1.1",
         "codemirror": "^6.0.2",
         "concurrently": "^9.0.1",
+        "date-fns": "^4.1.0",
         "echarts": "^5.6.0",
         "laravel-vite-plugin": "^2.0.0",
         "lucide-vue-next": "^0.468.0",
@@ -47,7 +48,7 @@
         "vue": "^3.5.13",
         "vue-codemirror": "^6.1.1",
         "vue-echarts": "^7.0.3",
-        "vue3-grid-layout-next": "^1.0.7",
+        "vue-grid-layout": "^3.0.0-beta1",
         "vuedraggable": "^4.1.0",
         "ziggy-js": "^2.4.2"
     },
