Update package dependencies and enhance dashboard layout functionality
- Added vue3-grid-layout-next for improved grid management in the dashboard.
- Updated Edit.vue to utilize vue3-grid-layout-next, enhancing widget layout handling.
- Introduced new CSS styles for Vue Grid Layout to improve visual organization of dashboard widgets.
- Refactored chart data formatting logic to ensure compatibility with updated widget data structure.

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
         "vue-codemirror": "^6.1.1",
         "vue-echarts": "^7.0.3",
         "vue-grid-layout": "^3.0.0-beta1",
+        "vue3-grid-layout-next": "^1.0.7",
         "vuedraggable": "^4.1.0",
         "ziggy-js": "^2.4.2"
     },
